--- a/TransactionFeeCalculator/TransactionFeeCalculator.csproj
+++ b/TransactionFeeCalculator/TransactionFeeCalculator.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fee.cs" />
+    <Compile Include="FeesAndCharges.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
